# dumux-rosi

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  README  README.md  cmake.opts  cmake_nompi.opts  cmake_nompi_cluster.opts  config.h.cmake  dumux-rosi.pc.in  dumux3_nompi.sh  dumux3_nompi_.sh  dune.module  ef  install_Mai2019.sh  install_Mai2019_IBG3Cluster.sh  install_modules.sh  install_pubMai2018.sh  installdrosi.py  installdrosi_JSC.py  installdumux.py  optim.opts  optim_cluster.opts  optim_nompi.opts  readme
cpp/: CMakeLists.txt  readme
cpp/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
cpp/coupled_1p_richards/: CMakeLists.txt  coupled.cc  coupled_periodic.cc  modelparameter  propertiesMix.hh
cpp/coupled_1pnc_richards/: CMakeLists.txt  coupled_stomata.cc  modelparameter  propertiesPeriodic.hh  results
cpp/coupled_1pnc_richardsnc/: CMakeLists.txt  coupled_1p2c.cc  coupled_periodic_1p2c.cc  modelparameter  propertiesCC.hh  propertiesPeriodic.hh  results
cpp/python_binding/: CMakeLists.txt  py_richards.cc  py_richards.hh  py_richards10c.cc  py_richards10c.hh  py_richards10c_cyl.cc  py_richards10c_cyl.hh  py_richards22c.cc  py_richards22c.hh  py_richards22c_cyl.cc  py_richards22c_cyl.hh  py_richards2c.cc  py_richards2c.hh  py_richards2c_cyl.cc  py_richards2c_cyl.hh  py_richards3c_cyl.cc  py_richards3c_cyl.hh  py_richards4c.cc  py_richards4c.hh  py_richards4c_cyl.cc  py_richards4c_cyl.hh  py_richards5c.cc  py_richards5c.hh  py_richards5c_cyl.cc  py_richards5c_cyl.hh  py_richards_cyl.cc  py_richards_cyl.hh  py_richardsnc.cc  py_richardsnc.hh  py_richardsnc_cyl.cc  py_richardsnc_cyl.hh  richards.hh  richards10.hh  richards10_cyl.hh  richards22.hh  richards22_cyl.hh  richards4.hh  richards4_cyl.hh  richards5.hh  richards5_cyl.hh  (+5 more)
cpp/roots_1p/: CMakeLists.txt  grids  properties.hh  properties_nocoupling.hh  properties_periodic.hh  rootspatialparams_cavitation_dgf.hh  rootspatialparams_dgf.hh  rootspatialparams_rb.hh  rootsproblem.hh  rootsproblem_schroeder.hh  rootsystem.cc  rootsystem_periodic.cc
cpp/roots_1pnc/: CMakeLists.txt  properties.hh  properties_1p2c.hh  properties_nocoupling.hh  properties_periodic_1p2c.hh  properties_periodic_stomata.hh  properties_stomata.hh  rootspatialparams_cavitation_dgf.hh  rootsproblem_1p2c.hh  rootsproblem_stomata.hh  rootsystem_1p2c.cc  rootsystem_stomata.cc
cpp/soil_richards/: CMakeLists.txt  main.cc  properties.hh  properties__.hh  properties_cyl.hh  properties_nocoupling.hh  richards.cc  richards_cyl.cc  richardsparams.hh  richardsproblem.hh  richardsproblem_schroeder.hh  runProblem.hh  runProblem2.hh  solverbase.hh  spatialparams.hh
cpp/soil_richards10c/: CMakeLists.txt  properties_10c.hh  properties_cyl_10c.hh  richards1p10cproblem.hh  richardsparams10c.hh
cpp/soil_richards22c/: properties_10c.hh  properties_cyl_10c.hh  richards1p22cproblem.hh
cpp/soil_richards4c/: properties_4c.hh  properties_cyl_4c.hh  richards1p4cproblem.hh
cpp/soil_richards5c/: properties_5c.hh  properties_cyl_5c.hh  richards1p5cproblem.hh
cpp/soil_richardsnc/: CMakeLists.txt  oldCMakeLists.txt  properties.hh  properties_10c.hh  properties_3c.hh  properties_cyl.hh  properties_cyl_10c.hh  properties_cyl_3c.hh  properties_cyl_5c.hh  properties_cyl_5c_k.hh  properties_cyl_5c_k2.hh  properties_cyl_nc.hh  properties_nc.hh  properties_nocoupling.hh  richards1d1p10c_PyBi_ads.cc  richards1d2c_PyBi.cc  richards1p10c.cc  richards1p10c_PyBi.cc  richards1p10c_PyBi_reset.cc  richards1p10c_cyl.cc  richards1p10cproblem_cyl.hh  richards1p2c.cc  richards1p2c1rproblem.hh  richards1p2cRproblem_.hh  richards1p2cproblem.hh  richards1p3c.cc  richards1p3cInit.cc  richards1p3cR.cc  richards1p3cR_cyl.cc  richards1p3cproblem.hh  richards1p3cproblemReaction.hh  richards1p3cproblemReaction_cyl.hh  richards1p3cproblemReaction_cylBeforeUseMol.hh  richards1p5cR_cyl.cc  richards1p5cR_cyl_BU.cc  richards1p5cR_cyl_k.cc  richards1p5cR_cyl_k2.cc  richards1p5cproblemReaction_cyl - Kopie.hh  richards1p5cproblemReaction_cyl.hh  richards1p5cproblemReaction_cyl_extraForTroubleshooting.hh  (+15 more)
cpp/soil_tracer/: CMakeLists.txt  grids  main.cc  params.input  tracerproblem.hh
cpp/testCell/: CMakeLists.txt  main.cc  params.input
dumux/porousmediumflow/: CMakeLists.txt  CMakeLists.txt~
experimental/TraiRhizo/: CMakeLists.txt  XcGrowth.py  XcGrowth_simple.py  cyl3plant.py  cyl3plant_simple.py  errphoto_9.055556_0.txt  errphoto_9.055556_1.txt  errphoto_9.055556_2.txt  errphoto_9.055556_3.txt  errphoto_9.055556_4.txt  errphoto_9.055556_5.txt  errphoto_9.055556_6.txt  example6c_coupling.py  loopphoto_9.055556_0.txt  loopphoto_9.055556_1.txt  loopphoto_9.055556_2.txt  loopphoto_9.055556_3.txt  loopphoto_9.055556_4.txt  loopphoto_9.055556_5.txt  loopphoto_9.055556_6.txt  loopphoto_9.055556_7.txt  output_random_rows.csv  richards1d10c_PyBi.cc  richards3d10c_PyBi.cc  richards3d10c_PyBi_initVals.cc  scenario_setup.py  smallTest_ads6_1d3d_simple.py  smallTest_ads6_3d_simple.py  smallTest_ads7_3d.py  soil_b5.cc  soil_b5.py  soil_b5_10c.cc  soil_b5_10c.py  soil_b5_10cILU.cc  soil_b5_10cILURes.cc  soil_b5_10cSSORC.cc  soil_b5_10cSeq.cc  test1_1d_simple.py
rosi_benchmarking/coupled/: CMakeLists.txt  coupled.cc  coupled1.cc  coupled_seq.cc  decoupled.cc  input  properties.hh  propertiesCC.hh  richards1d.cc  richardsparams.hh  richardsproblem1d.hh
rosi_benchmarking/coupled_1pnc_richards/: CMakeLists.txt  coupled_periodic_stomata.cc  coupled_stomata.cc  coupled_stomata_periodic.cc  modelparameter  propertiesCC.hh  propertiesCC_stomata.hh  propertiesMix.hh  propertiesPeriodic.hh  results
rosi_benchmarking/coupled_1pnc_richardsnc/: CMakeLists.txt  coupled_1p2c.cc  coupled_periodic_1p2c.cc  propertiesCC.hh  propertiesPeriodic.hh  results
rosi_benchmarking/python_solver/: CMakeCache.txt  CMakeLists.txt  RootSoilInteraction.cc  RootSoilInteraction.hh  input  py_richards.hh  py_richards_cyl.hh  py_solver.cc  py_solver.hh  python  richards.hh  richards_cyl.hh  richardssp.cc  richardssp.hh  richardsspsolver.cc  richardsspsolver.hh  richardsyaspsolver.cc  richardsyaspsolver.hh  solverbase.hh
(+11685 files in other folders)
