# add_subdirectory("richards2cbuffer") # moved to old
# add_subdirectory("rootmodel1p2c") # moved to old
# add_subdirectory("richardsmodelnc") # moved to old

# add_subdirectory("compositional") # overwrite to introduce buffer power
# add_subdirectory("compositionalCylindrical1d") # overwrite to introduce buffer power
add_subdirectory("richards")
# add_subdirectory("richardsCylindrical1d") 

# add_subdirectory("richardsnc") # overwrite to change io field from moleFraction to massFraction
# add_subdirectory("richardsncCylindrical1d") 

# add_subdirectory("tracerCylindrical1d") 
