#install headers
install(FILES
richards2clocalresidual.hh
richards2cfluxvariables.hh
richards2cpropertydefaults.hh
richards2cvolumevariables.hh
richards2cindices.hh
richards2cnewtoncontroller.hh
richards2cproperties.hh
richards2cproblem.hh
richards2cmodel.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dumux/porousmediumflow/richards2c)
